crates/kirin-derive-interpreter/src/eval_call/snapshots/kirin_derive_interpreter__eval_call__tests__callable_global.snap
---
source: crates/kirin-derive-interpreter/src/eval_call/tests.rs
assertion_line: 98
expression: "case!\n{\n    #[kirin(type = ArithType)] #[wraps] #[callable] enum TestDialect\n    {\n        Arith(Arith<ArithType>), ControlFlow(ControlFlow<ArithType>),\n        FunctionBody(FunctionBody<ArithType>),\n    }\n}"
---
#[automatically_derived]
impl<'__ir, __CallSemI> ::kirin_interpreter::CallSemantics<'__ir, __CallSemI, TestDialect>
    for TestDialect
where
    __CallSemI: ::kirin_interpreter::Interpreter<'__ir>,
    __CallSemI::Error: From<::kirin_interpreter::InterpreterError>,
    Arith<ArithType>: ::kirin_interpreter::CallSemantics<'__ir, __CallSemI, TestDialect>,
    ControlFlow<ArithType>: ::kirin_interpreter::CallSemantics<
        __CallSemI,
        TestDialect,
        Result = <Arith<ArithType> as ::kirin_interpreter::CallSemantics<
            '__ir,
            __CallSemI,
            TestDialect,
        >>::Result,
    >,
    FunctionBody<ArithType>: ::kirin_interpreter::CallSemantics<
        __CallSemI,
        TestDialect,
        Result = <Arith<ArithType> as ::kirin_interpreter::CallSemantics<
            '__ir,
            __CallSemI,
            TestDialect,
        >>::Result,
    >,
{
    type Result = <Arith<ArithType> as ::kirin_interpreter::CallSemantics<
        '__ir,
        __CallSemI,
        TestDialect,
    >>::Result;
    fn eval_call(
        &self,
        interpreter: &mut __CallSemI,
        stage: &'__ir ::kirin::ir::StageInfo<TestDialect>,
        callee: ::kirin::ir::SpecializedFunction,
        args: &[__CallSemI::Value],
    ) -> Result<Self::Result, __CallSemI::Error> {
        match self {
            Self::Arith(field_0) => field_0.eval_call(interpreter, stage, callee, args),
            Self::ControlFlow(field_0) => field_0.eval_call(interpreter, stage, callee, args),
            Self::FunctionBody(field_0) => field_0.eval_call(interpreter, stage, callee, args),
        }
    }
}
