crates/kirin-derive-interpreter/src/eval_call/snapshots/kirin_derive_interpreter__eval_call__tests__mixed_enum.snap
---
source: crates/kirin-derive-interpreter/src/eval_call/tests.rs
expression: "case!\n{\n    #[kirin(type = TestType)] enum TestDialect\n    {\n        #[wraps] Arith(Arith<TestType>), #[wraps]\n        ControlFlow(ControlFlow<TestType>), Custom { a: i32, b: i32 },\n    }\n}"
---
#[automatically_derived]
impl<'__ir, __CallSemI> ::kirin_interpreter::CallSemantics<'__ir, __CallSemI, TestDialect>
    for TestDialect
where
    __CallSemI: ::kirin_interpreter::Interpreter<'__ir>,
    __CallSemI::Error: From<::kirin_interpreter::InterpreterError>,
    Arith<TestType>: ::kirin_interpreter::CallSemantics<'__ir, __CallSemI, TestDialect>,
    ControlFlow<TestType>: ::kirin_interpreter::CallSemantics<
        '__ir,
        __CallSemI,
        TestDialect,
        Result = <Arith<TestType> as ::kirin_interpreter::CallSemantics<
            '__ir,
            __CallSemI,
            TestDialect,
        >>::Result,
    >,
{
    type Result = <Arith<TestType> as ::kirin_interpreter::CallSemantics<
        '__ir,
        __CallSemI,
        TestDialect,
    >>::Result;
    fn eval_call(
        &self,
        interpreter: &mut __CallSemI,
        stage: &'__ir ::kirin::ir::StageInfo<TestDialect>,
        callee: ::kirin::ir::SpecializedFunction,
        args: &[__CallSemI::Value],
    ) -> Result<Self::Result, __CallSemI::Error> {
        match self {
            Self::Arith(field_0) => field_0.eval_call(interpreter, stage, callee, args),
            Self::ControlFlow(field_0) => field_0.eval_call(interpreter, stage, callee, args),
            Self::Custom { a, b } => {
                Err(::kirin_interpreter::InterpreterError::MissingEntry.into())
            }
        }
    }
}
