crates/kirin-derive-interpreter/src/eval_call/snapshots/kirin_derive_interpreter__eval_call__tests__non_wrapper_struct.snap
---
source: crates/kirin-derive-interpreter/src/eval_call/tests.rs
assertion_line: 71
expression: "case! { #[kirin(type = TestType)] struct Regular { a: i32, b: i32, } }"
---
#[automatically_derived]
impl<'__ir, __CallSemI> ::kirin_interpreter::CallSemantics<'__ir, __CallSemI, Regular> for Regular
where
    __CallSemI: ::kirin_interpreter::Interpreter<'__ir>,
    __CallSemI::Error: From<::kirin_interpreter::InterpreterError>,
{
    type Result = __CallSemI::Value;
    fn eval_call(
        &self,
        _interpreter: &mut __CallSemI,
        _stage: &'__ir ::kirin::ir::StageInfo<Regular>,
        _callee: ::kirin::ir::SpecializedFunction,
        _args: &[__CallSemI::Value],
    ) -> Result<Self::Result, __CallSemI::Error> {
        Err(::kirin_interpreter::InterpreterError::MissingEntry.into())
    }
}
